# mwnz-evaluation

./: openapi-companies.yaml
companies-backend/: Cargo.toml
companies-backend/src/: api_error.rs  companies_route.rs  company_type.rs  fetch_company.rs  main.rs
companies-backend/src/tests/: company_type.rs  fetch_company.rs  mod.rs  router.rs
process/: 1 preparing.md  2 implementing.md  4 post implementation thoughts.md  5 running.md  6 deploying.md
